Implemented loading and saving of lists locally.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "store": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
