--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^2.2.0",
+    "jsonpack": "^1.1.5",
+    "pako": "^1.0.11",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "recharts": "^1.8.5",
     "store": "^2.0.12"
