--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "gh-pages": "^2.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "recharts": "^1.8.5",
+    "redux": "^4.0.5",
     "store": "^2.0.12"
   },
   "scripts": {
