--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/file-saver": "^2.0.1",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.0",
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
     "file-saver": "^2.0.2",
     "gh-pages": "^2.2.0",
     "react": "^16.13.0",
@@ -20,7 +25,8 @@
     "react-scripts": "3.4.0",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.7",
+    "@types/store": "^2.0.2"
   }
 }
