--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^16.9.6",
     "file-saver": "^2.0.2",
     "gh-pages": "^2.2.0",
+    "localforage": "^1.9.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
@@ -25,7 +26,6 @@
     "react-scripts": "3.4.0",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
-    "store": "^2.0.12",
     "typescript": "^3.8.3"
   },
   "scripts": {
