--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -53,6 +54,6 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
-    "@types/store": "^2.0.2"
+    "source-map-explorer": "^2.4.2"
   }
 }
