add linting and formatting pre-commit

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "prettier . --check && eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && tsc",
+    "format": "prettier . --write",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -37,10 +39,21 @@
     "@typescript-eslint/parser": "^5.59.6",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.40.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^5.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
+    "prettier": "3.0.3",
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
     "vite-plugin-pwa": "^0.14.7"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ],
+    "*.!{ts,tsx}": "prettier --ignore-unknown --write"
   }
 }
